completed my push up

--- a/morning_push_ups.html
+++ b/morning_push_ups.html
@@ -1,72 +1,74 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Enter Title Here</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>Enter Title Here</title>
 
-    <!----- STYLESHEET  STARTS  HERE ----->
-    <style src="jcss/external.css"></style>
-</head>
-<body>
-
-
-<!----- JAVIASCRIPT STARTS  HERE ------->
-<script>
-
-    (function () {
-        "use strict";
-        // morning warm ups #1
-        function seven () {
-            return 7;
-        };
-
-        console.log(seven());
+        <!----- STYLESHEET  STARTS  HERE ----->
+        <style src="jcss/external.css"></style>
+    </head>
+    <body>
 
 
-        // morning warm ups #2
+    <!----- JAVIASCRIPT STARTS  HERE ------->
+        <script>
 
-        function firstAndLastArr(arr) {
-            let bucket = [];
-            bucket.push(arr[0]);
-            bucket.push(arr[arr.length - 1]);
-            return bucket;
-        };
+            (function () {
+                "use strict";
+                // morning warm ups #1
+                function seven () {
+                    return 7;
+                };
 
-        console.log(firstAndLastArr([1,2,3,4]));
-        console.log(firstAndLastArr(["dog", "cat", "rat", "bat"));
-        console.log(["Geoff"]);
-
+                console.log(seven());
 
 
-        // Alternate solution for problem #2.
-        let array = ['Where', 'the ','wild ','things', 'are']
-        function theArray() {
-            let first = array[0];
-            let last = array[array.length-1];
-            document.write("First element is, " + first +  " The Last element is "+ last);
-        }
+                // morning warm ups #2
 
-        // morning warm ups #3
-        function firstLast(x) {
+                function firstAndLastArr(arr) {
+                    let bucket = [];
+                    bucket.push(arr[0]);
+                    bucket.push(arr[arr.length - 1]);
+                    return bucket;
+                };
 
-            return (x);
-        };
-
-
-        // morning warm ups #4
-        function functionName(x) {
-
-            return (x);
-        };
+                console.log(firstAndLastArr([1,2,3,4]));
+                console.log(firstAndLastArr(["dog", "cat", "rat", "bat"));
+                console.log(["Geoff"]);
 
 
-        // morning warm ups #5
-        function functionName(x) {
 
-            return (x);
-        };
+                // Alternate solution for problem #2.
+                let array = ['Where', 'the ','wild ','things', 'are']
+                function theArray() {
+                    let first = array[0];
+                    let last = array[array.length-1];
+                    document.write("First element is, " + first +  " The Last element is "+ last);
+                }
+
+                // morning warm ups #3
+                function firstLast(x) {
+
+                    return (x);
+                };
 
 
-    }) ();
-</script>
-</body>
+                // morning warm ups #4
+                function functionName(x) {
+
+                    return (x);
+                };
+
+
+                // morning warm ups #5
+                function functionName(x) {
+
+                    return (x);
+                };
+                 // morning push up #6
+
+
+
+            }) ();
+        </script>
+    </body>
 </html>
