--- a/morning_push_ups.html
+++ b/morning_push_ups.html
@@ -1,74 +1,79 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Enter Title Here</title>
-
-        <!----- STYLESHEET  STARTS  HERE ----->
-        <style src="jcss/external.css"></style>
+        <title>DOM Manipulation Warmups</title>
+        <style>
+            .letter {
+                cursor: crosshair;
+            }
+            .title-letter {
+                color: firebrick;
+                font-size: 3em;
+            }
+            .bg-colors li {
+                cursor: pointer;
+            }
+        </style>
     </head>
     <body>
-
-
-    <!----- JAVIASCRIPT STARTS  HERE ------->
+        <h1>
+            <span class="letter">D</span><span class="letter">O</span><span class="letter">M</span>
+            <span class="letter">W</span><span class="letter">a</span><span class="letter">r</span><span class="letter">m</span>
+            <span class="letter">U</span><span class="letter">p</span><span class="letter">s</span>
+        </h1>
+        <h3>Letter from title in lowercase: <span class="title-letter"></span></h3>
+        <h3>The sum is: <span id="sum-output">0</span></h3>
+        <label for="number">Number</label>
+        <input id="number" type="number" name="number" min="0" max="5" value="0">
+        <button id="add-btn">Add</button>
+        <hr>
+        <ul class="bg-colors">
+            <li>Red</li>
+            <li>Green</li>
+            <li>Blue</li>
+        </ul>
+        <!--  Include the CDN script for jQuery below -->
+        <script
+                src="http://code.jquery.com/jquery-2.2.4.min.js"
+                integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+                crossorigin="anonymous"></script>
         <script>
-
-            (function () {
-                "use strict";
-                // morning warm ups #1
-                function seven () {
-                    return 7;
-                };
-
-                console.log(seven());
-
-
-                // morning warm ups #2
-
-                function firstAndLastArr(arr) {
-                    let bucket = [];
-                    bucket.push(arr[0]);
-                    bucket.push(arr[arr.length - 1]);
-                    return bucket;
-                };
-
-                console.log(firstAndLastArr([1,2,3,4]));
-                console.log(firstAndLastArr(["dog", "cat", "rat", "bat"));
-                console.log(["Geoff"]);
-
-
-
-                // Alternate solution for problem #2.
-                let array = ['Where', 'the ','wild ','things', 'are']
-                function theArray() {
-                    let first = array[0];
-                    let last = array[array.length-1];
-                    document.write("First element is, " + first +  " The Last element is "+ last);
+            "use strict";
+            // TODO: add the needed JS so that the number selected in the number input will be added to the number in the span
+            $('#add-btn').click(function() {
+                var numVal = parseInt($('#number').val());
+                var currVal = parseInt($('#sum-output').text());
+                $('#sum-output').text(numVal + currVal);
+            });
+            /*
+            TODO: add the needed JS so that when the cursor hovers over a letter in the h1 title,
+             the letter will appear in the span with a class of `title-letter`, in lowercase.
+             When the cursor is not hovering over a letter in the h1 title, no letter should be
+             displayed in the span with a class of `title-letter`.
+            */
+            $('.letter').hover(
+                function() {
+                    var letter = $(this).text().toLowerCase();
+                    $('.title-letter').text(letter);
+                },
+                function() {
+                    $('.title-letter').text('');
                 }
-
-                // morning warm ups #3
-                function firstLast(x) {
-
-                    return (x);
-                };
-
-
-                // morning warm ups #4
-                function functionName(x) {
-
-                    return (x);
-                };
+            );
+            /*
+                TODO: When an li in the ul with a class of `bg-colors` is double-clicked,
+                 the background color of the page will change to the li's inner text
+             */
+            $(".bg-colors li").dblclick(function(e){
+                // console.log(e.target.innerText);
+                const color($(e.target).text());
+                $("body").css("bg-color", color);
+            });
 
 
-                // morning warm ups #5
-                function functionName(x) {
-
-                    return (x);
-                };
-                 // morning push up #6
-
-
-
-            }) ();
         </script>
     </body>
 </html>
+Collapse
+
