feat saving unsaved files

--- a/MyExtraWork/float_positioning.html
+++ b/MyExtraWork/float_positioning.html
@@ -8,16 +8,45 @@
                 margin: 0;
                 padding: 0;
             }
+
             .container {
                 background-color: #3A4444;
                 padding: 20px;
+
             }
+
+            .box {
+                width: calc(25% - 44px);
+                border: 2px solid lightgray;
+                color: #3A4444;
+                background-color: #E0E0D1;
+                padding: 20px;
+                line-height: 1.4em;
+
+
+            }
+
+            .box h2 {
+                color: #2DB475;
+                text-align: center;
+                margin-bottom: 20px;
+                border-bottom: 2px solid lightgray;
+            }
+
+            .left {
+                float: left;
+            }
+
+            .clear {
+                clear: both;
+            }
+
 
 
         </style>
     </head>
     <body>
-        <div class"group container">
+        <div class="group container">
             <div class="box left">
                 <h2>First</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam animi asperiores at atque aut
@@ -47,10 +76,8 @@
                 magnam magni omnis porro quasi quod ratione sit tenetur totam ut veritatis.
                 </p>
             </div>
+
+            <div class="clear"></div>
         </div>
     </body>
-
-    <script>
-
-    </script>
 </html>
