--- a/MyExtraWork/ajax-forEach-practice.html
+++ b/MyExtraWork/ajax-forEach-practice.html
@@ -32,7 +32,7 @@
 
 
 
-                    let months = ["January", "February","March","April","May","Jun","July","August","September","October","November","Decenber"];
+                    let months = ["January", "February","March","April","May","Jun","July","August","September","October","Decenber"];
 
                     months.forEach(function (month, index){
                         console.log(month)
