--- a/practice001.html
+++ b/practice001.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+    </head>
+    <body>
+        <script>
+            "use strict";
+
+            const names = ['Jvier', 'Alesha'];
+            const otherNames = ['Lyn', 'Steven'];
+
+            const allNames = [...names, ...otherNames];
+            console.log(allNames);
+
+        </script>
+    </body>
 </html>
